Cambios en archivo index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <p>nuevo texto</p>
     <label for="">Inserta texto abajo:</label>
     <input type="text" id="campoTxt" />
 
